# cis2450-fandom-big-data-project

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: bluesky_posts.parquet  bluesky_user_ip_activity.parquet  bluesky_users.parquet  cf_ip_affinity.parquet  cf_item_factors.npy  cf_test_results.parquet  cf_train_matrix_stats.parquet  cf_user_factors.npy  cf_user_history.parquet  cf_user_index.parquet  cf_validation_results.parquet  cf_video_index.parquet  cf_video_metadata.parquet  youtube_comments.parquet  youtube_query_results.parquet  youtube_user_ip_activity.parquet  youtube_user_video_map.parquet  youtube_users.parquet  youtube_video_query_map.parquet  youtube_videos.parquet
notebooks/: collaborative_filtering_model.ipynb  early_eda.ipynb  eda_with_duckdb_and_polars.ipynb  eda_with_duckdb_and_polars_bluesky.ipynb
src/: build_bluesky_tables.py  build_youtube_comment_tables.py  build_youtube_video_tables.py  check_setup.py  collect_bluesky.py  collect_youtube.py  collect_youtube_comments.py  collect_youtube_comments_round_robin.py  config.py  ip_config.py  load_duckdb.py  utils.py  youtube_collect_common.py
src/dashboard/: app.py  lib.py
src/dashboard/pages/: 01_overview.py  02_youtube.py  03_bluesky.py  04_collab_filtering.py  05_cross_platform.py
